--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
                 </div>
             </div>
         </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#home"><i class="fas fa-home"></i></a>
+                    </li>
+                    <li><a href="#about">About</a>
+                    </li>
+                    <li><a href="#work-sec">Transformation</a>
+                    </li>
+                    <li><a href="#contact-sec">Contact</a>
+                    </li>
+                    <li><a href="#map-sec">Location</a>
+                    </li>
+                </ul>
+            </div>
     </section>
 
     <section class=" color-light">
